# Echolocate

./: .gitignore  CODE_SIGNING_GUIDE.md  EXECUTION_COMPLETE_SESSION_2.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_4_SESSION_SUMMARY.md  README.md  RELEASE_GUIDE.md  REMAINING_PHASES_COMPLETION.md  SESSION_2_SUMMARY.md  SESSION_3_FINAL_SUMMARY.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: backend-ci.yml  release.yml  (+1 more)
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
scripts/: clean-heavy.sh  clean-local-all.sh  compact_oui_csv.py  disk-usage.sh  generate-release-notes.sh  lean-dev.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/alerts/: engine.rs  mod.rs  notifier.rs  rules.rs
src-tauri/src/commands/: alert.rs  device.rs  export.rs  mod.rs  scan.rs  settings.rs  validate.rs
src-tauri/src/db/: cache.rs  encryption.rs  migrations.rs  mod.rs  recovery.rs
src-tauri/src/db/queries/: alerts.rs  devices.rs  mod.rs  ports.rs  scans.rs  settings.rs
src-tauri/src/network/: interface.rs  mod.rs  oui.rs  resolver.rs
src-tauri/src/scanner/: fingerprint.rs  ipv6.rs  mod.rs  orchestrator.rs  orchestrator_ipv6_tests.rs  passive.rs  ping.rs  port.rs
src-tauri/tests/: error_scenarios.rs  integration_test.rs
(+46 files in other folders)
